<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textColor="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/lbl_descricao"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/descricao"
            android:layout_width="262dp"
            android:layout_height="64dp"
            android:focusable="true"
            android:gravity="center"
            android:hint="@string/hint_description"
            android:textColorHint="@android:color/white"
            android:inputType="text"
            android:textSize="18sp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/lbl_data"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/edt_data"
            android:layout_width="263dp"
            android:layout_height="64dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:textColorHint="@android:color/white"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/hint_date"
            android:textSize="18sp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_valor"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/edt_valor"
            android:layout_width="265dp"
            android:layout_height="64dp"
            android:focusable="true"
            android:gravity="center"
            android:textColorHint="@android:color/white"
            android:hint="@string/hint_valor"
            android:inputType="numberDecimal"
            android:text="R$ "
            android:textColor="@android:color/white"
            android:textSize="18sp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginRight="5dp">
        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_salvar"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button">
        </Button>
    </LinearLayout>

</LinearLayout>