<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/lbl_data"
                android:paddingEnd="8dp"/>

            <EditText
                android:id="@+id/listar_edt_data"
                android:layout_width="261dp"
                android:layout_height="50dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_date"
                android:padding="8dp" />

            <Button
                android:id="@+id/btn_buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_buscar"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_button_pink" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/output_total"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:paddingEnd="10dp"
                android:text="@string/total"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Total:" />

            <TextView
                android:id="@+id/txt_total_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
